--- a/app/views/matches/_user_table.html.haml
+++ b/app/views/matches/_user_table.html.haml
@@ -15,7 +15,7 @@
           = image_tag(match.second_team.flag, height: '14')
           = match.second_team.abbreviation
 
-  - @users.each do |user|
+  - group.users.each do |user|
     %tr.text-center
       %td{ class: ('current-user' if user == current_user) }= link_to user.username, user_path(user)
       %td= user.points(@round)
