--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,6 +40,7 @@ html,body{
 
 #body{
   padding-bottom: 100px;    /* height of footer */
+  padding-left: 225px;
   margin-left: 240px;
   margin-top: -20px
 }
