--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -1,10 +1,14 @@
-%h1 Twoje grupy
-%br
-
-- @groups.each do |group|
-  = link_to group.name, group
+- if current_user.groups.empty?
+  %h1 Nie należysz jeszcze do żadnej grupy.
+  = link_to 'Stwórz własną!', new_group_path
+- else
+  %h1 Twoje grupy
   %br
 
-%br
+  - @groups.each do |group|
+    = link_to group.name, group
+    %br
 
-= link_to 'Stwórz własną grupę!', new_group_path
+  %br
+
+  = link_to 'Stwórz własną grupę!', new_group_path
