--- a/app/views/matches/_user_table.html.haml
+++ b/app/views/matches/_user_table.html.haml
@@ -3,7 +3,7 @@
     %td Użytkownik
     %td Punkty
 
-    - @matches.each do |match|
+    - @matches.includes(:first_team, :second_team).each do |match|
       %td.text-center
         = link_to(match.first_team) do
           = image_tag(match.first_team.flag, height: '14')
