group service created

--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -6,4 +6,4 @@
     = f.association :competitions, as: :check_boxes
 
   .form-actions
-    = f.button :submit
+    = f.button :submit, 'Utwórz grupę'
