--- a/app/views/layouts/_admin_menu.html.haml
+++ b/app/views/layouts/_admin_menu.html.haml
@@ -23,3 +23,7 @@
     = link_to admin_competitions_path, class: "btn btn-default btn-block" do
       .text-left
         Turnieje
+  .row
+    = link_to admin_settings_path, class: "btn btn-default btn-block" do
+      .text-left
+        Ustawienia
