--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,7 +45,7 @@ html,body{
 #body{
   padding-bottom: 100px;    /* height of footer*/
   /*padding-top: 200px;*/
-  /*padding-left: 200px;*/
+  padding-left: 200px;
   /*margin-left: 240px;*/
   margin-top: -20px;
   /*margin-bottom: 100px;*/
