--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,10 +1,17 @@
 %h1 Zasady
 
 %br/
-%p 1. Każdy mecz typować można do godziny przed jego rozpoczęciem.
-%p 2. Typy zmieniać można dowolną ilość razy do godziny przed rozpoczęciem danego meczu.
-%p 3. Nie trzeba typować całej kolejki za jednym razem.
-%p 4. Po zatwierdzeniu danego typu zapisywany jest on automatycznie w bazie. Nie ma potrzeby zatwierdzania/zapisywania całej kolejki.
-%p 5. Punktacja – za trafnie wytypowanego zwycięzcę meczu lub remis otrzymujemy 1 punkt. Za wytypowanie dokładnego wyniku meczu (np. 2-1) przyznawany jest dodatkowy punkt, więc za 1 mecz można otrzymać maksymalnie 2 punkty.
-%p 6. Aplikacja musi "spać" przez 8 godzin dziennie, żeby być darmowa. Przez to czasem odpalenie strony może chwilę trwać, bo musi się "obudzić" ;)
-%p 7. W razie problemów z aplikacją proszę o kontakt z naszym developerem Pulpecją!
+%ol
+  %li Każdy mecz typować można do godziny przed jego rozpoczęciem.
+  %br
+  %li Typy zmieniać można dowolną ilość razy do godziny przed rozpoczęciem danego meczu. Nie trzeba typować całej kolejki za jednym razem.
+  %br
+  %li Po zatwierdzeniu danego typu zapisywany jest on automatycznie w bazie. Nie ma potrzeby zatwierdzania/zapisywania całej kolejki.
+  %br
+  %li Punktacja – za trafnie wytypowanego zwycięzcę meczu lub remis otrzymujemy 2 punkty. Za wytypowanie dokładnego wyniku meczu (np. 2-1) przyznawany jest dodatkowy punkt, więc za 1 mecz można otrzymać maksymalnie 3 punkty.
+  %br
+  %li Dodatkowo typujemy zwycięzcę całego mundialu (na górze strony turnieju). Za trafne wytypowanie zwycięzcy można otrzymać 5 bonusowych punktów.
+  %br
+  %li W przypadku równej sumy punktów o wyższym miejscu decyduje suma trafnych wyników.
+  %br
+  %li Aplikacja musi "spać" przez 8 godzin dziennie, żeby być darmowa, więc czasem odpalenie strony może chwilę trwać, bo musi się "obudzić" ;)
