winner_types as ? only if present

--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -39,7 +39,7 @@
             %td= user.type_points(nil, competition)
             %td= user.score_points(nil, competition)
             %td= user.all_points(nil, competition)
-            %td= user.winner_type_team(competition)
+            %td= user.winner_type_team(competition, current_user)
   %br
 
 
