--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -5,7 +5,27 @@
 
     #navbar
       %ul.nav.navbar-nav
-        %li= link_to 'Zasady', rules_path
+        %li
+          = link_to 'Zasady', rules_path
+        %li
+          %a
+            Turnieje
+          %ul
+            - current_user.user_competitions.each do |competition|
+              %li= link_to competition.full_name, competition_path(competition)
+
+        %ul.nav.navbar-nav
+          %li.dropdown
+            %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "groups_path"}
+              Twoje grupy
+              %span.caret
+            %ul.dropdown-menu
+              %li
+                = link_to "Twoje grupy", groups_path, class: "dropdown-item nav-item nav-link"
+                %ul
+                  - current_user.groups.each do |group|
+                    %li= link_to group.name, group_path(group)
+
       %ul.nav.navbar-nav.pull-right
         - if user_signed_in?
           %li= link_to current_user.username, edit_user_registration_path
