--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -5,25 +5,26 @@
 
     #navbar
       %ul.nav.navbar-nav
-        %li
-          = link_to 'Zasady', rules_path
-        %li.dropdown
-          %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#{}"}
-            Turnieje
-            %span.caret
-          %ul.dropdown-menu
-            - current_user.user_competitions.each do |competition|
-              %li= link_to competition.full_name, competition_path(competition)
-
+        - if user_signed_in?
+          %li
+            = link_to 'Zasady', rules_path
           %li.dropdown
             %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#{}"}
-              Twoje grupy
+              Turnieje
               %span.caret
             %ul.dropdown-menu
-              - current_user.groups.each do |group|
-                %li= link_to group.name, group_path(group)
-              %li.divider
-              %li= link_to 'Stwórz nową grupę!', new_group_path
+              - current_user.user_competitions.each do |competition|
+                %li= link_to competition.full_name, competition_path(competition)
+
+            %li.dropdown
+              %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#{}"}
+                Twoje grupy
+                %span.caret
+              %ul.dropdown-menu
+                - current_user.groups.each do |group|
+                  %li= link_to group.name, group_path(group)
+                %li.divider
+                %li= link_to 'Stwórz nową grupę!', new_group_path
 
 
       %ul.nav.navbar-nav.pull-right
