--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -38,5 +38,5 @@
           .large-12.columns
             %hr
               %p.pull-left
-                EuroTyper 2016 by
-                %a{ href: "http://github.com/pulpecja" } @pulpecja
+                Typerek 2018 by
+                %a{ href: 'mailto:pulpecja@gmail.com' } pulpecja
