--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -10,6 +10,8 @@
   %br
   %li Punktacja – za trafnie wytypowanego zwycięzcę meczu lub remis otrzymujemy 2 punkty. Za wytypowanie dokładnego wyniku meczu (np. 2-1) przyznawany jest dodatkowy punkt, więc za 1 mecz można otrzymać maksymalnie 3 punkty.
   %br
+  %li W meczach fazy pucharowej typujemy wynik po regulaminowym czasie gry (90 min bez uwzględnienia dogrywki i karnych).
+  %br
   %li Dodatkowo typujemy zwycięzcę całego mundialu (na górze strony turnieju). Za trafne wytypowanie zwycięzcy można otrzymać 5 bonusowych punktów.
   %br
   %li W przypadku równej sumy punktów o wyższym miejscu decyduje suma trafnych wyników.
