--- a/app/assets/stylesheets/matches.css.scss
+++ b/app/assets/stylesheets/matches.css.scss
@@ -13,7 +13,7 @@
 }
 
 .current-user {
-  a {
+  a, a:visited {
     color: red;
   }
 }
@@ -30,4 +30,10 @@
       font-weight:normal;
     }
   }
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
