--- a/app/views/admin/competitions/_form.html.haml
+++ b/app/views/admin/competitions/_form.html.haml
@@ -4,6 +4,8 @@
   .form-inputs
     = f.input :name, required: true
     = f.input :year, include_blank: false, required: true
+    = f.input :start_date, as: :string, input_html: { value: played_value(@competition.start_date) }
+    = f.input :end_date, as: :string, input_html: { value: played_value(@competition.end_date) }
     = f.input :place
     = f.input :winner_id, collection: Team.all
 
