--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -19,6 +19,7 @@
 
 .text-center
   - @group.competitions.order('start_date desc').each do |competition|
+    - rankings = Ranker.rank(@users, by: lambda{ |u| u.all_points(nil, competition)})
     %h3= link_to competition.full_name, group_competition_matches_path(@group.id, competition.id)
     %br
 
@@ -32,14 +33,22 @@
             %th.text-center Wyniki
             %th.text-center Suma punktów
             %th.text-center Typowany zwycięzca
-        - @group.users.existing.sort_by{ |u| [u.all_points(nil, competition), u.score_points(nil, competition)] }.reverse.each_with_index do |user, i|
-          %tr
-            %td= "#{i+1}."
-            %td= link_to user.username, user_path(user)
-            %td= user.type_points(nil, competition)
-            %td= user.score_points(nil, competition)
-            %td= user.all_points(nil, competition)
-            %td= user.winner_type_team(competition, current_user)
+
+        - rankings.each do |rank|
+          - rank_users = rank.rankables.group_by{|u| u.score_points(nil, competition)}
+          - player_no = 0
+          - rank_users.sort_by{|k, v| k}.reverse.each_with_index do |group, index|
+            - group[1].each_with_index do |user, i|
+              %tr
+                %td= set_place(rank.rank, player_no, i, index)
+                %td= link_to user.username, user_path(user)
+                %td= user.type_points(nil, competition)
+                %td= user.score_points(nil, competition)
+                %td= user.all_points(nil, competition)
+                %td= user.winner_type_team(competition, current_user)
+              - player_no += 1
+
+
   %br
 
 
