--- a/app/views/admin/users/_form.html.haml
+++ b/app/views/admin/users/_form.html.haml
@@ -8,5 +8,10 @@
         = f.input :email, required: true
         = f.input :role, required: true, collection: User::ROLES, include_blank: false
         = f.input :take_part, collection: [['Tak', true], ['Nie', false]], include_blank: false
+      .row
+        .col-md-3.text-right
+          = f.label :competitions
+        .col-md-9
+          = f.association :competitions, label: false, collection: Competition.all.order('name'), input_html: { class: 'select2-dropdown' }
       .form-actions
         = f.button :submit, "Zapisz"
