--- a/app/views/admin/matches/_form.html.haml
+++ b/app/views/admin/matches/_form.html.haml
@@ -2,8 +2,8 @@
   = f.error_notification
 
   .form-inputs
-    = f.input :first_team_id,  collection: Team.ordered, include_blank: false, required: true
-    = f.input :second_team_id, collection: Team.ordered, include_blank: false, required: true
+    = f.input :first_team_id,  collection: Team.ordered, include_blank: true, required: true
+    = f.input :second_team_id, collection: Team.ordered, include_blank: true, required: true
     = f.input :played, as: :string, input_html: { value: played_value(@match.played) }
     = f.input :round_id, collection: Round.all
     = f.input :first_score
