--- a/app/views/admin/teams/_form.html.haml
+++ b/app/views/admin/teams/_form.html.haml
@@ -10,7 +10,7 @@
       - unless @team.photo.nil?
         %label Obecna fotka
         %br/
-        = image_tag @team.photo.url(:thumb)
+        = image_tag @team.photo.url(:thumb) if @team.photo.url
       = f.file_field :photo
 
   .form-actions
