add champions league 2020

--- a/app/views/competitions/show.html.haml
+++ b/app/views/competitions/show.html.haml
@@ -1,4 +1,4 @@
-%h1.text-center= competition_name
+%h1.text-center= @competition.name
 = render 'matches/winner_type', competition: @competition
 %h2.text-center= @round.name
 %br
