--- a/app/views/matches/index.html.haml
+++ b/app/views/matches/index.html.haml
@@ -1,4 +1,4 @@
-%h1.text-center= competition_name
+%h1.text-center= @competition.name
 = render 'winner_type', competition: @competition
 %h2.text-center
   Grupa
